# de-zoomcamp-2026

./: .gitignore  README.md
01-docker-terraform/: docker-compose.yml  learning-summary-01.md  makefile  requirements.txt
01-docker-terraform/docker-sql/: Dockerfile  main.py  pyproject.toml
01-docker-terraform/docker-sql/modules/: __init__.py  ingestor.py  utils.py
01-docker-terraform/docker-sql/src/dtc_etl/: __init__.py  config.py
01-docker-terraform/docker-sql/src/dtc_etl/core/: __init__.py  ingestion_pipeline.py
01-docker-terraform/docker-sql/src/dtc_etl/db/: __init__.py  client.py  loader_csv.py  loader_parquet.py  lock.py  optimize.py  schema.py  swapper.py  validator_repo.py
01-docker-terraform/docker-sql/src/dtc_etl/ports/: __init__.py  database.py  loader.py  lock.py  schema.py  swapper.py  validator.py
01-docker-terraform/docker-sql/src/dtc_etl/utils/: __init__.py  datetime_fix.py  downloader.py  file_types.py  identifiers.py
